# abet-converter

./: .gitignore  AGENTS.md  CITATION.cff  MANIFEST.in  README.md  citation.bib  convert.py  pyproject.toml
.github/workflows/: release.yml
docs/: cli.md  output_artifacts.md
src/: __init__.py  __main__.py
src/abet_converter/: cli.py
src/abet_converter/components/ingest/: abet_to_sqlite.py  convert_abetdb_to_sqlite.py
src/abet_converter/core/: manifests.py  run_layout.py
src/abet_converter/drivers/: __init__.py  mdbtools.py
src/abet_converter/interfaces/: models.py
src/abet_converter/services/: jsonl_logger.py
src/components/ingest/: __init__.py  abet_to_sqlite.py  convert_abetdb_to_sqlite.py
src/core/: __init__.py  manifests.py  run_layout.py
src/deployments/: __init__.py  cli.py
src/drivers/: mdbtools.py
tests/unit/: test_abet_to_sqlite.py  test_cli.py  test_local_real_database.py  test_mdbtools_runtime.py  test_public_surface.py
tools/runtime/linux/arm64/: bundle_metadata.json  libmdb.pc  libmdb.so.3  mdb-export  mdb-schema
tools/runtime/linux/x64/: bundle_metadata.json  libmdb.so.3  mdb-schema  mdb-tables
tools/runtime/macos/arm64/: libmdb.3.dylib  libmdbsql.3.dylib  mdb-schema
tools/runtime/macos/x64/: bundle_metadata.json  libmdb.3.dylib  libmdbsql.3.dylib  mdb-schema  mdb-tables
tools/runtime/windows/x64/: bundle_metadata.json
