[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abet-converter"
version = "0.3.0"
description = "Cross-platform self-contained CLI to convert ABET and MDB databases into SQLite, SQL, CSV, and XLSX."
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["openpyxl>=3.1"]

[project.scripts]
abet-converter = "src.deployments.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
